# Launcher

./: README.md  dropdown.html  index.html  package-lock.json  package.json  vite.config.ts
scripts/: generate-latest-json.mjs  tauri.mjs
src/: index.html  main.js
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer.nsi
src-tauri/src/: app_state.rs  crash_dumps.rs  dialogs.rs  inject.rs  latite_dll.rs  launch_request.rs  launcher.rs  localization.rs  logging.rs  main.rs  minecraft.rs  options.rs  paths.rs  release.rs  single_instance.rs  ui.rs  version_info.rs
src/css/: styling.css
src/js/: app.js
src/locales/: ar_SA.json  cs_CZ.json  de_DE.json  en_US.json  es_ES.json  fa_IR.json  fr_FR.json  ja_JP.json  ko_KR.json  nl_NL.json  pl_PL.json  pt_PT.json  ru_RU.json
