[package]
name = "latite-launcher"
version = "0.1.0"
description = "Latite Client Launcher"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-start-dragging", "shell-open", "dialog-open", "dialog-message" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows = { version = "0.61.0", features = ["Win32_Foundation", "Win32_System", "Win32_System_LibraryLoader", "Win32_System_Threading",
    "Win32_System_Memory", "Win32_Security", "Win32_System_Diagnostics_Debug", "Win32_System_Diagnostics_ToolHelp", "Win32_UI", "Win32_UI_WindowsAndMessaging"] }
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
